// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header when is disabled Rendering renders according to design 1`] = `
<div
  className="sc-ifAKCX LlTRb"
>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Ativo"
    >
      Ativo:
    </label>
    <label
      className="sc-htpNat jMFgIO"
      id="AtivoValue"
      name="AtivoValue"
    >
      WDO
    </label>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Tipo"
    >
      Tipo:
    </label>
    <label
      className="sc-htpNat jMFgIO"
      id="TipoValue"
      name="TipoValue"
    >
      Abertura
    </label>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Sistema"
    >
      Sistema:
    </label>
    <label
      className="sc-htpNat jMFgIO"
      id="SistemaValue"
      name="SistemaValue"
    >
      name 1
    </label>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Estratégia"
    >
      Estratégia:
    </label>
    <label
      className="sc-htpNat jMFgIO"
      id="EstratégiaValue"
      name="EstratégiaValue"
    >
      3x1
    </label>
  </div>
</div>
`;

exports[`Header when is enabled Rendering renders according to design 1`] = `
<div
  className="sc-ifAKCX LlTRb"
>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Ativo"
    >
      Ativo:
    </label>
    <select
      className="sc-bxivhb ldZUon"
      id="Ativo"
      name="Ativo"
      onChange={[Function]}
    >
      <option
        value="WDO"
      >
        WDO
      </option>
      <option
        value="WIN"
      >
        WIN
      </option>
    </select>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Tipo"
    >
      Tipo:
    </label>
    <select
      className="sc-bxivhb ldZUon"
      id="Tipo"
      name="Tipo"
      onChange={[Function]}
    >
      <option
        value="Pregão"
      >
        Pregão
      </option>
      <option
        value="Abertura"
      >
        Abertura
      </option>
    </select>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Sistema"
    >
      Sistema:
    </label>
    <select
      className="sc-bxivhb ldZUon"
      id="Sistema"
      name="Sistema"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        name 1
      </option>
      <option
        value={2}
      >
        name 2
      </option>
    </select>
  </div>
  <div
    className="sc-bdVaJa lhrPED"
  >
    <label
      className="sc-bwzfXH ebnOHd"
      htmlFor="Estratégia"
    >
      Estratégia:
    </label>
    <select
      className="sc-bxivhb ldZUon"
      id="Estratégia"
      name="Estratégia"
      onChange={[Function]}
    >
      <option
        value="Topo / Fundo"
      >
        Topo / Fundo
      </option>
      <option
        value="Fecha Fora / Fecha Dentro"
      >
        Fecha Fora / Fecha Dentro
      </option>
      <option
        value="3x1"
      >
        3x1
      </option>
      <option
        value="Fabolous 4"
      >
        Fabolous 4
      </option>
    </select>
  </div>
</div>
`;
